--- a/reconstruct/package.xml
+++ b/reconstruct/package.xml
@@ -49,12 +49,19 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>message_generation</build_depend>
   <build_depend>pcl_ros</build_depend>
   <build_depend>roscpp</build_depend>
   <build_export_depend>pcl_ros</build_export_depend>
   <build_export_depend>roscpp</build_export_depend>
+  <exec_depend>camera_input</exec_depend>
+  <exec_depend>message_runtime</exec_depend>
+  <exec_depend>nodelet</exec_depend>
   <exec_depend>pcl_ros</exec_depend>
+  <exec_depend>realsense2_camera</exec_depend>
   <exec_depend>roscpp</exec_depend>
+  <exec_depend>rtabmap_ros</exec_depend>
+  <exec_depend>rviz</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
