added yaml files for all meshing parameters

--- a/reconstruct/package.xml
+++ b/reconstruct/package.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>reconstruct</name>
-  <version>0.0.0</version>
-  <description>The reconstruct package</description>
+  <version>1.0.0</version>
+  <description>Offers services for 3D reconstruction. Provides launch files to make a point cloud map</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="arun@todo.todo">arun</maintainer>
+  <maintainer email="arunkumar2021@u.northwestern.edu">Arun Kumar</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
   <!-- Commonly used license strings: -->
   <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>TODO</license>
+  <license>GPLv3</license>
 
 
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
